Add paging and sorting to get all quiz, partially build update api